Mouse move particle effect

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <canvas></canvas>
-
+<!--
     <script src="assets/js/level1.js"></script>
+    <script src="assets/js/level2.js"></script>
+    <script src="assets/js/level3.js"></script>
+-->
+    <script src="assets/js/level4.js"></script>
 </body>
 </html>
